src/styles/icon.css
.icon {
  display: flex;
  flex-direction: column;
  align-items: center;
  cursor: default;
  width: 80px;
  height: 100px;
  user-select: none; /* Prevent text selection while dragging */
  justify-content: center;
}

.react-draggable > .icon:hover {
  background: #ffffff33;
  box-shadow: inset 0px 0px 0px 1px #fff;
}

.folder-content > .icon:hover {
  background: #ffffff33;
  box-shadow: inset 0px 0px 0px 1px #fff;
}

.icon img {
  width: 64px;
  height: 64px;
  pointer-events: none; /* Prevent image from capturing drag events */
}

.icon span {
  margin-top: 5px;
  color: white;
  text-align: center;
  font-size: 12px;
  text-shadow: 0px 0px 7px #000;
}

.folder-content .icon span 
{
  text-shadow: none;
}

.icon:active {
  cursor: grabbing;
}

